--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,19 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  dark-primary:    #303F9F,
+  light-primary:   #C5CAE9,
+  primary:         #3F51B5,
+  secondary:       #F18805,
+  danger:          #92140C,
+  light:           #FFFBDD,
+  dark:            #222,
+  text:            #FFFFFF,
+  primary-text:    #212121,
+  secondary-text:  #757575,
+  divider:         #BDBDBD,
+  green:           #48A9A6
+  pink:            #DB5461
 );
 
 
