--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -45,7 +45,7 @@ $colors: (
   primary-text:    #212121,
   secondary-text:  #757575,
   divider:         #BDBDBD,
-  green:           #48A9A6
+  green:           #48A9A6,
   pink:            #DB5461
 );
 
