change login page, add buton, colors

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,9 +34,9 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  dark-primary:    #303F9F,
+  dark-primary:    #3F51B5,
   light-primary:   #C5CAE9,
-  primary:         #3F51B5,
+  primary:         #303F9F,
   secondary:       #F18805,
   danger:          #92140C,
   light:           #FFFBDD,
