--- a/src/pages/inicio/inicio.scss
+++ b/src/pages/inicio/inicio.scss
@@ -1,5 +1,25 @@
 inicio {
-    ion-content {
-        background-color:#283523;
+    #bg {
+        background-color:#fffbdd;
+    }
+    
+    #logo{
+        padding-top: 5%;
+    }
+
+    #frase{
+        margin-top: 20%;
+        margin: 5%;
+        .slogan{
+            color: color($colors, secondary);
+            text-transform: uppercase
+        }
+        h1{
+            font-weight: bold;
+            color: color($colors, primary-text)
+        }
+        p{
+            color: color($colors, primary-text)
+        }
     }
 }
