--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,23 @@
 page-home {
+  background-color: white;
+  div.scrollmenu {
+    overflow-x: auto;
+    white-space: nowrap;
+  }
 
+  ion-card.card {
+
+    color: black;
+    display: inline-block;
+    width: 70%;
+  }
+  img.card {
+    width: 100%;
+    height: 50%;
+  }
+
+  div.scrollmenu h5 {
+    font-family: "Times New Roman", Times, serif;
+    color: black;
+  }
 }
