outras coisinhas alteradas

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,17 +6,14 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <button ion-item (click)="openPage(homePage)">
+      <button ion-item (click)="openPage(1)">
         Home
       </button>
-      <button ion-item (click)="openPage(friendsPage)">
+      <button ion-item (click)="openPage(2)" >
         Meus Cursos
       </button>
-      <button ion-item (click)="openPage(eventsPage)">
+      <button ion-item (click)="openPage(0)">
         Sobre a Tech!
-      </button>
-      <button ion-item (click)="closeMenu()">
-        Close Menu
       </button>
     </ion-list>
   </ion-content>
