Adiciona pagina 'Minha Conta'

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,6 +15,9 @@
       <button ion-item (click)="openPage(0)">
         Sobre a Tech!
       </button>
+      <button ion-item (click)="openPage(3)">
+        Minha Conta
+      </button>
     </ion-list>
   </ion-content>
 </ion-menu>
