Adiciona scss de cadastro, icon para 'Minha Conta' no menu e estiliza toolbar de 'Minha Conta'

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -19,7 +19,7 @@
         <ion-icon color="secondary-text" name="information-circle" item-left></ion-icon> Sobre a Tech!
       </button>
       <button ion-item (click)="openPage(3)">
-        Minha Conta
+        <ion-icon color="secondary-text" name="contact" item-left></ion-icon> Minha Conta
       </button>
     </ion-list>
   </ion-content>
